# ccb-team-memory

./: .gitignore  CLAUDE.md  PRD-CHANGELOG.md  PRD.md  PROJECT-REVIEW.md  README.md  ccb-annto-memory.example.yaml  install.sh  pyproject.toml
.githooks/: commit-msg
docs/: extraction-logic.md
src/team_memory/: __init__.py  __main__.py
src/team_memory/cli/: consolidate_cmd.py  extract.py  init.py  install.py  integrate.py  knowledge_cmd.py  load.py  main.py  review.py  sync.py  verify_cmd.py
src/team_memory/config/: __init__.py  annto.py  settings.py
src/team_memory/knowledge/: __init__.py  base.py  registry.py  runner.py  store.py
src/team_memory/knowledge/extractors/: __init__.py  architecture.py  qa.py  requirements.py  workflow.py
src/team_memory/knowledge/tags/: default.yaml
src/team_memory/services/: agent_loop.py  api_client.py  consolidation.py  extract.py  extraction_manager.py  installer.py  integration.py  loader.py  scanner.py  sync.py  verify.py
src/team_memory/templates/: SKILL.md  extract.md
src/team_memory/utils/: git.py  picker.py  transcript.py
tests/: test_config.py  test_extract.py  test_extraction_manager.py  test_scanner.py  test_verify.py
